Fixing bug#1684 by cleaning and simplifying the code of selection peas